exports[`no-async-describe > invalid(1): import {test, describe, suite, beforeEach} from 'node:test';\ndescribe(\"s\", async () => { test(\"x\", () => {}); }); 1`] = `

  1 | import {test, describe, suite, beforeEach} from 'node:test';
  2 | describe("s", async () => { test("x", () => {}); });

`;

exports[`no-async-describe > invalid(1): import {test, describe, suite, beforeEach} from 'node:test';\ndescribe(\"s\", async () => { test(\"x\", () => {}); }); 2`] = `

Message:
  1 | import {test, describe, suite, beforeEach} from 'node:test';
> 2 | describe("s", async () => { test("x", () => {}); });
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`node:test\` does not await a \`describe\` callback, so any test registered after an \`await\` is silently dropped. Make the callback synchronous.

`;

exports[`no-async-describe > invalid(2): import {test, describe, suite, beforeEach} from 'node:test';\nsuite(\"s\", async () => { test(\"x\", () => {}); }); 1`] = `

  1 | import {test, describe, suite, beforeEach} from 'node:test';
  2 | suite("s", async () => { test("x", () => {}); });

`;

exports[`no-async-describe > invalid(2): import {test, describe, suite, beforeEach} from 'node:test';\nsuite(\"s\", async () => { test(\"x\", () => {}); }); 2`] = `

Message:
  1 | import {test, describe, suite, beforeEach} from 'node:test';
> 2 | suite("s", async () => { test("x", () => {}); });
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`node:test\` does not await a \`suite\` callback, so any test registered after an \`await\` is silently dropped. Make the callback synchronous.

`;

exports[`no-async-describe > invalid(3): import {test, describe, suite, beforeEach} from 'node:test';\ndescribe(\"s\", async function () { test(\"x\", () => {}); }); 1`] = `

  1 | import {test, describe, suite, beforeEach} from 'node:test';
  2 | describe("s", async function () { test("x", () => {}); });

`;

exports[`no-async-describe > invalid(3): import {test, describe, suite, beforeEach} from 'node:test';\ndescribe(\"s\", async function () { test(\"x\", () => {}); }); 2`] = `

Message:
  1 | import {test, describe, suite, beforeEach} from 'node:test';
> 2 | describe("s", async function () { test("x", () => {}); });
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`node:test\` does not await a \`describe\` callback, so any test registered after an \`await\` is silently dropped. Make the callback synchronous.

`;

exports[`no-async-describe > invalid(4): import {test, describe, suite, beforeEach} from 'node:test';\ndescribe(\"s\", async () => { test(\"a\", () => {}); await f(); test(\"b\", () => {}); }); 1`] = `

  1 | import {test, describe, suite, beforeEach} from 'node:test';
  2 | describe("s", async () => { test("a", () => {}); await f(); test("b", () => {}); });

`;

exports[`no-async-describe > invalid(4): import {test, describe, suite, beforeEach} from 'node:test';\ndescribe(\"s\", async () => { test(\"a\", () => {}); await f(); test(\"b\", () => {}); }); 2`] = `

Message:
  1 | import {test, describe, suite, beforeEach} from 'node:test';
> 2 | describe("s", async () => { test("a", () => {}); await f(); test("b", () => {}); });
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`node:test\` does not await a \`describe\` callback, so any test registered after an \`await\` is silently dropped. Make the callback synchronous.

`;

exports[`no-async-describe > invalid(5): import {test, describe, suite, beforeEach} from 'node:test';\ndescribe.only(\"s\", async () => {}); 1`] = `

  1 | import {test, describe, suite, beforeEach} from 'node:test';
  2 | describe.only("s", async () => {});

`;

exports[`no-async-describe > invalid(5): import {test, describe, suite, beforeEach} from 'node:test';\ndescribe.only(\"s\", async () => {}); 2`] = `

Message:
  1 | import {test, describe, suite, beforeEach} from 'node:test';
> 2 | describe.only("s", async () => {});
    |                    ^^^^^^^^^^^^^^ \`node:test\` does not await a \`describe\` callback, so any test registered after an \`await\` is silently dropped. Make the callback synchronous.

`;

exports[`no-async-describe > invalid(6): import * as nodeTest from 'node:test';\nnodeTest.describe(\"s\", async () => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.describe("s", async () => {});

`;

exports[`no-async-describe > invalid(6): import * as nodeTest from 'node:test';\nnodeTest.describe(\"s\", async () => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.describe("s", async () => {});
    |                        ^^^^^^^^^^^^^^ \`node:test\` does not await a \`describe\` callback, so any test registered after an \`await\` is silently dropped. Make the callback synchronous.

`;

exports[`no-async-describe > invalid(7): import {test, describe, suite, beforeEach} from 'node:test';\ndescribe(\"s\", async (): Promise<void> => {}); 1`] = `

  1 | import {test, describe, suite, beforeEach} from 'node:test';
  2 | describe("s", async (): Promise<void> => {});

`;

exports[`no-async-describe > invalid(7): import {test, describe, suite, beforeEach} from 'node:test';\ndescribe(\"s\", async (): Promise<void> => {}); 2`] = `

Message:
  1 | import {test, describe, suite, beforeEach} from 'node:test';
> 2 | describe("s", async (): Promise<void> => {});
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`node:test\` does not await a \`describe\` callback, so any test registered after an \`await\` is silently dropped. Make the callback synchronous.

`;
